# HumanFileShare

./: Backlog.md  Cargo.toml
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs
src/net/: discovery.rs  endpoint.rs  mod.rs  pairing.rs  transfer.rs
src/ui/: mod.rs  root.rs  theme.rs
src/ui/components/: mod.rs  portal.rs  received.rs  title.rs
