[package]
name = "humanfileshare"
version = "0.1.0"
edition = "2024"
authors = ["Humancorp"]
description = "Cross-platform file sharing made simple"
license = "MIT"
repository = "https://github.com/humancorp/humanfileshare"
keywords = ["file-sharing", "p2p", "airdrop", "transfer"]
categories = ["network-programming", "gui"]

[lib]
doctest = false

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Zed patterns
once_cell = "1.19"
parking_lot = "0.12"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# P2P networking with iroh
iroh = "0.35"
iroh-blobs = "0.35"

# Local network discovery
mdns-sd = "0.12"
flume = "0.11"

# Utilities
dirs = "5.0"
rand = "0.8"
hostname = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "21.0"

[profile.dev]
opt-level = 1
debug = "line-tables-only"
incremental = true
codegen-units = 256
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.dev.package.gpui]
opt-level = 3

[profile.dev.package.gpui-component]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
